// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not do anything for non imported identifier 1`] = `
"(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"../a\\", \\"/test.jsx\\");
})();

import A from \\"../a\\";
const B = {};
mockExternalComponents(B);
it(\\"test\\", () => {
  expect(render(React.createElement(A, null))).toMatchSnapshot();
});"
`;

exports[`Does not do anything for non imported identifier 2`] = `
"\\"use strict\\";

(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"../a\\", \\"/test.jsx\\");
})();

var _a = _interopRequireDefault(require(\\"../a\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

const B = {};
mockExternalComponents(B);
it(\\"test\\", () => {
  expect(render(React.createElement(_a.default, null))).toMatchSnapshot();
});"
`;

exports[`Process mockExternalComponents call 1`] = `
"(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"../a\\", \\"/test.jsx\\");
})();

(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"b\\", \\"/test.jsx\\");
})();

(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"../../c\\", \\"/test.jsx\\");
})();

import A from \\"../a\\";
import { B } from \\"b\\";
import * as C from \\"../../c\\";
import render from \\"renderer\\";
it(\\"test\\", () => {
  expect(render(React.createElement(A, null))).toMatchSnapshot();
});"
`;

exports[`Process mockExternalComponents call 2`] = `
"\\"use strict\\";

(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"../a\\", \\"/test.jsx\\");
})();

(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"b\\", \\"/test.jsx\\");
})();

(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"../../c\\", \\"/test.jsx\\");
})();

var _a = _interopRequireDefault(require(\\"../a\\"));

var _b = require(\\"b\\");

var C = _interopRequireWildcard(require(\\"../../c\\"));

var _renderer = _interopRequireDefault(require(\\"renderer\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

it(\\"test\\", () => {
  expect((0, _renderer.default)(React.createElement(_a.default, null))).toMatchSnapshot();
});"
`;

exports[`Throws error for non identifier 1`] = `"Invalid argument passed to mockExternalComponents"`;

exports[`Throws error for non identifier 2`] = `"Invalid argument passed to mockExternalComponents"`;

exports[`Works for 2 identifiers from same file 1`] = `
"(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"../a\\", \\"/test.jsx\\");
})();

import A, { B, C, D } from \\"../a\\";
it(\\"test\\", () => {
  expect(render(React.createElement(A, null))).toMatchSnapshot();
});"
`;

exports[`Works for 2 identifiers from same file 2`] = `
"\\"use strict\\";

(function () {
  const {
    mockExternalComponents
  } = jest.requireActual(\\"jest-mock-external-components\\");
  mockExternalComponents(\\"../a\\", \\"/test.jsx\\");
})();

var _a = _interopRequireWildcard(require(\\"../a\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

it(\\"test\\", () => {
  expect(render(React.createElement(_a.default, null))).toMatchSnapshot();
});"
`;
